# Resonance-UX

./: .gitignore  Ava AI Coach  CLAUDE.md  Daily Flow with Night Mode  Ecosystem Architecture  RSD Breathwork  RSD Check-In Chat  RSD Ecosystem Hub  RSD Habit Tracker  RSD Interactive Workbook  RSD Journal  RSD Social Quotes  RSD Therapist Portal  RSD Watch App  Resonance 1  Resonance 3  Resonance Watch  To Do  Writer  build.gradle.kts  gradle.properties  iPAD  settings.gradle.kts
GitHub Backup Portal/: package.json
GitHub Backup Portal/electron/: main.js
GitHub Backup Portal/public/: index.html
GitHub Backup Portal/scripts/: appflowy-bridge.js  generate-pdf-report.js  kopia-setup.js
GitHub Backup Portal/src/: App.js
HauteLumiere/: Package.swift  README.swift
LuminousConstructiveDevelopment/Web/: package.json
ResonanceApp/: Info.plist  Package.swift  generate_project.py  project.yml  setup.sh
ResonanceApp/Resonance.xcodeproj/: project.pbxproj
ResonanceApp/Shared/: ContentView.swift
ResonanceBackup/: Info-watchOS.plist  Info.plist  Package.swift  README.swift
ResonancePortal/: ContentView.swift  ResonancePortalApp.swift
ResonancePortal.xcodeproj/: project.pbxproj
android/: MainActivity.kt  build.gradle.kts
android/app/: build.gradle.kts
apple/: Package.swift
apps/linux/: Cargo.toml
audiobook/: metadata.json
backend/: package.json
desktop/: build.gradle.kts
ios/: ResonanceApp.swift
landing/: index.html
linux/: Cargo.toml
linux/src/: main.rs  models.rs  theme.rs
linux/src/views/: daily_flow.rs  mod.rs  wellness.rs  writer.rs
love-journal/: index.html  package-lock.json  package.json
luminous-app/: app.json  package.json
luminous-os/: index.html  package-lock.json  package.json
macos/: ResonanceMacApp.swift
resonance-vault/: package.json
shared/: build.gradle.kts
tvos/: ResonanceTVApp.swift
watchos/: ResonanceWatchApp.swift
web/: package.json  vite.config.ts
(+444 files in other folders)
